--- a/app/globals.css
+++ b/app/globals.css
@@ -129,7 +129,7 @@
     --sidebar-border: oklch(0.922 0 0);
     --sidebar-ring: oklch(0.708 0 0);
   }
- 
+
   .dark {
     --sidebar: oklch(0.205 0 0);
     --sidebar-foreground: oklch(0.985 0 0);
@@ -142,4 +142,28 @@
   }
 }
 
+body {
+  margin: 0;
+  /* overflow: hidden; */
+}
 
+.wrapper {
+  position: absolute;
+  top: -100vw;
+  left: 0;
+  width: 100vh;
+  height: 100vw;
+  transform: rotate(90deg);
+  transform-origin: bottom left;
+}
+
+.idk {
+  height: 100vh;
+  width: 100vw;
+}
+
+/* body { */
+/* transform: rotate(90deg); */
+
+/* transform-origin: top left; */
+/* } */
